--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
 								<h1>Vinnubók í Tölvustuddri Framleiðslu</h1>
 							</header>
 							<div class="content">
-								<p>VEFSÍÐUGRUNNUR FENGINN FRÁ: HTML5 UP</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">Áfram</a></li>
 								</ul>
 							</div>
 						</div>
@@ -61,7 +60,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="images/Vefsida.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="Verkefni%201.html" class="link">Verkefni 1</a></h3>
@@ -100,7 +99,7 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">+Verkefni 4</a></h3>
+										<h3><a href="landing.html" class="link">Verkefni 4</a></h3>
 										<p>-</p>
 									</header>
 								</article>
@@ -118,11 +117,9 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="inner">
-									<header class="major">
-										<h2>Ferilskrá</h2>
-									</header>
+									
 									<ul class="actions">
-										<li><a href="CV.html" class="button next">Get Started</a></li>
+										<li><a href="CV.html" class="button next">Ferilskrá</a></li>
 									</ul>
 								</div>
 							</section>
