--- a/index.html
+++ b/index.html
@@ -28,14 +28,13 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="index.html">Heim</a></li>
+							<li><a href="Verkefni%201.html">Verkefni 1</a></li>
+							<li><a href="Verkefni%202.html">Verkefni 2</a></li>
+							<li><a href="Verkefni%203.html">Verkefni 3</a></li>
+                            <li><a href="Verkefni%204.html">Verkefni 4</a></li>
+                            <li><a href="Verkefni%205.html">Verkefni 5</a></li>
+                            <li><a href="CV.html">Ferilskrá</a></li>
 						</ul>
 					</nav>
 
@@ -130,28 +129,6 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
