--- a/CV.html
+++ b/CV.html
@@ -25,17 +25,16 @@
 						</nav>
 					</header>
 
-				<!-- Menu -->
+<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="index.html">Heim</a></li>
+							<li><a href="Verkefni%201.html">Verkefni 1</a></li>
+							<li><a href="Verkefni%202.html">Verkefni 2</a></li>
+							<li><a href="Verkefni%203.html">Verkefni 3</a></li>
+                            <li><a href="Verkefni%204.html">Verkefni 4</a></li>
+                            <li><a href="Verkefni%205.html">Verkefni 5</a></li>
+                            <li><a href="CV.html">Ferilskrá</a></li>
 						</ul>
 					</nav>
 
