--- a/Verkefni 1.html
+++ b/Verkefni 1.html
@@ -28,8 +28,8 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Heim</a></li>
-							<li><a href="Verkefni%201.html">Verkefni 1</a></li>
-							<li><a href="Verkefni%202.html">Verkefni 2</a></li>
+							<li><a href="Verkefni%201.html">Vefsíða</a></li>
+							<li><a href="Arduino.html">Framleiðsla, hönnun og forritun ígreyptra kerfa</a></li>
 							<li><a href="Verkefni%203.html">Verkefni 3</a></li>
                             <li><a href="Verkefni%204.html">Verkefni 4</a></li>
                             <li><a href="Verkefni%205.html">Verkefni 5</a></li>
