--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Heim</a></li>
-							<li><a href="Verkefni%201.html">Verkefni 1</a></li>
-							<li><a href="Verkefni%202.html">Verkefni 2</a></li>
+							<li><a href="Verkefni%201.html">Vefsíða</a></li>
+							<li><a href="Arduino.html">Framleiðsla, hönnun og forritun ígreyptra kerfa</a></li>
 							<li><a href="Verkefni%203.html">Verkefni 3</a></li>
                             <li><a href="Verkefni%204.html">Verkefni 4</a></li>
                             <li><a href="Verkefni%205.html">Verkefni 5</a></li>
@@ -62,17 +62,17 @@
 										<img src="images/Vefsida.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="Verkefni%201.html" class="link">Verkefni 1</a></h3>
-										<p>Vefsíða</p>
+										<h3><a href="Verkefni%201.html" class="link">Vefsíða</a></h3>
+										<p>Verkefni 1 - Tölvustudd framleiðsla</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images/Arduino6.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Verkefni 2</a></h3>
-										<p>-</p>
+										<h3><a href="Arduino.html" class="link">Framleiðsla, hönnun og forritun ígreyptra kerfa</a></h3>
+										<p>Verkefni 1 - Tölvustýrður vélbúnaður</p>
 									</header>
 								</article>
 								<article>
