--- a/Verkefni 3.html
+++ b/Verkefni 3.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Forty by HTML5 UP</title>
+		<title>Tölvustuddur skurður</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Jónas Þór Gunnarsson</strong> </a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,14 +28,13 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="index.html">Heim</a></li>
+							<li><a href="Verkefni%201.html">Vefsíða</a></li>
+							<li><a href="Arduino.html">Framleiðsla, hönnun og forritun ígreyptra kerfa</a></li>
+							<li><a href="Verkefni%203.html">Verkefni 3</a></li>
+                            <li><a href="Verkefni%204.html">Verkefni 4</a></li>
+                            <li><a href="Verkefni%205.html">Verkefni 5</a></li>
+                            <li><a href="CV.html">Ferilskrá</a></li>
 						</ul>
 					</nav>
 
@@ -46,12 +45,14 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic</h1>
+										<h1>Tölvustuddur skurður</h1>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+                                    <h2>Kerf prufa</h2>
+									<p>Til að ákvarða hversu mikið kerf sem laserskerarinn þurfti að gera prufu. Ég gerði prufuna með Aron Beck og Tómas Inga. Til þess að ákvarða kerfið skárum við tíu kass og mældum lengdina á kössunum og svo holuna í plastinu sem kassarnir voru skornir úr.</p>
+									<p>Lengd holunar var 9.9mm og samanlögð lengd kassana var 9.69mm. Þá fengum við að kerfið okkar væri (9.9-9.69)/11=0.019mm </p>
+                                    <h2>3D hönnun</h2>
+                                    <p>Ég ákvað að lazerskera skrifstofuskúffu fyrir litlu verkfærin mín. Ég byrjaði á því að mæla hvað lengsta verkfærið, sem er skífumálið mitt, og notaði það sem grunn á hversu stór skúffan ætti að vera. Ég endaði á því að hafa hana 250mm á lengd, 100mm á breidd og 50mm á hæð.</p>
 								</div>
 							</section>
 
