--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<li><a href="index.html">Heim</a></li>
 							<li><a href="Verkefni%201.html">Vefsíða</a></li>
 							<li><a href="Arduino.html">Framleiðsla, hönnun og forritun ígreyptra kerfa</a></li>
-							<li><a href="Verkefni%203.html">Verkefni 3</a></li>
+							<li><a href="Verkefni%203.html">Tölvustuddur skurður</a></li>
                             <li><a href="Verkefni%204.html">Verkefni 4</a></li>
                             <li><a href="Verkefni%205.html">Verkefni 5</a></li>
                             <li><a href="CV.html">Ferilskrá</a></li>
@@ -77,11 +77,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images/lazerskerari.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Verkefni 3</a></h3>
-										<p>-</p>
+										<h3><a href="Verkefni%203.html" class="link">Tölvustuddur skurður</a></h3>
+										<p>Verkefni 2 - Tölvustudd framleiðsla</p>
 									</header>
 								</article>
 								<article>
