--- a/3D.html
+++ b/3D.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forsíða</title>
+		<title>3D prentun og 3D skönnun</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
+					<header id="header">
 						<a href="index.html" class="logo"><strong>Jónas Þór Gunnarsson</strong> </a>
 						<nav>
 							<a href="#menu">Menu</a>
@@ -38,88 +38,54 @@
 						</ul>
 					</nav>
 
-				<!-- Banner -->
-					<section id="banner" class="major">
-						<div class="inner">
-							<header class="major">
-								<h1>Vinnubók í Tölvustuddri Framleiðslu</h1>
-							</header>
-							<div class="content">
-								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Áfram</a></li>
-								</ul>
-							</div>
-						</div>
-					</section>
-
 				<!-- Main -->
-					<div id="main">
+					<div id="main" class="alt">
 
 						<!-- One -->
-							<section id="one" class="tiles">
-								<article>
-									<span class="image">
-										<img src="images/Vefsida.png" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="Verkefni%201.html" class="link">Vefsíða</a></h3>
-										<p>Verkefni 1 - Tölvustudd framleiðsla</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/Arduino6.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="Arduino.html" class="link">Framleiðsla, hönnun og forritun ígreyptra kerfa</a></h3>
-										<p>Verkefni 1 - Tölvustýrður vélbúnaður</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/lazerskerari.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="Verkefni%203.html" class="link">Tölvustuddur skurður</a></h3>
-										<p>Verkefni 2 - Tölvustudd framleiðsla</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="3D.html" class="link">3D prentun og 3D skönnun</a></h3>
-										<p>-</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Verkefni 4</a></h3>
-										<p>-</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Verkefni 5</a></h3>
-										<p>-</p>
-									</header>
-								</article>
-							</section>
-
-						<!-- Two -->
-							<section id="two">
+							<section id="one">
 								<div class="inner">
-									
-									<ul class="actions">
-										<li><a href="CV.html" class="button next">Ferilskrá</a></li>
-									</ul>
+									<header class="major">
+										<h1>3D prentun og 3D skönnun</h1>
+									</header>
+                                    <h2></h2>
+                                    
+                                    <table>
+  <tr>
+    <th>Verkefnihluti</th>
+    <th>Skýring</th>
+    <th>Tími</th>
+  </tr>
+  <tr>
+    <td>3D hönnun</td>
+    <td>Hönnun og teikning</td>
+    <td>2 klst</td>
+  </tr>
+  <tr>
+    <td>Prufa</td>
+    <td>3D prent prufa </td>
+    <td>0.5 klst</td>
+  </tr>
+  <tr>
+    <td>3D Prentun</td>
+    <td>3D prentun á hlutnum</td>
+    <td>1 klst</td>
+  </tr>
+ <tr>
+    <td>3D Skanna</td>
+    <td>3D skanna hlut</td>
+    <td>? klst</td>
+  </tr>
+  <tr>
+    <td>Skrásetning</td>
+    <td>Skrásetning á vefsíðu</td>
+    <td>? klst</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td>?</td>
+  </tr>
+</table>
 								</div>
 							</section>
 
@@ -129,27 +95,49 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
+								<form method="post" action="#">
+									<div class="fields">
+										<div class="field half">
+											<label for="name">Name</label>
+											<input type="text" name="name" id="name" />
+										</div>
+										<div class="field half">
+											<label for="email">Email</label>
+											<input type="text" name="email" id="email" />
+										</div>
+										<div class="field">
+											<label for="message">Message</label>
+											<textarea name="message" id="message" rows="6"></textarea>
+										</div>
+									</div>
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="reset" value="Clear" /></li>
+									</ul>
+								</form>
+							</section>
+							<section class="split">
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">jthgunnarsson@gmail.com</a>
+										<a href="#">information@untitled.tld</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(+354) 841-8086</span>
+										<span>(000) 000-0000 x12387</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>Hegranes 9<br />
-										210 Garðabær<br />
-										Iceland</span>
+										<span>1234 Somewhere Road #5432<br />
+										Nashville, TN 00000<br />
+										United States of America</span>
 									</div>
 								</section>
 							</section>
