--- a/3D.html
+++ b/3D.html
@@ -47,8 +47,35 @@
 									<header class="major">
 										<h1>3D prentun og 3D skönnun</h1>
 									</header>
-                                    <h2></h2>
-                                    
+                                    <h2>Hönnun á skeiðhaldara fyrir kreatínið mitt</h2>
+                                    <p>Það sem ég ákvað að 3D prenta var einhverskonar haldara fyrir skeiðina mína í kreatínið mitt. Ástæðan fyrir því er að ég var þreyttur á að þurfa að róta í kreatín dolluna mína til að ná í skeiðina. Kreatín duftið myndi bæði fara á fingurnar mínar og það var pirrandi að þurfa að leita að skeiðinni.</p>
+                                    <span class="image main"><img src="images/skeid1.jpg" alt="" /></span>
+                                    <p>Kröfurnar sem ég setti fyrir sjálfann mig var að skeiðinn þarf að vera í dollunni, það þarf að vera hentugt að ná í skeiðinna og það þarf að vera auðveld að færa haldarann frá dollu til dollu þar sem kreatínið getur klárast og ef ég kaupi aðra dollu þarf ég ekki að hella öllu kreatín duftinu í dolluna með haldaranum.</p>
+                                    <p>Hönnuninn sem ég kom upp með var haldari sem festist í vegg dollunar með seglum. Ég byrjaði að kaupa 2 12mmx3mm segla.</p>
+                                    <span class="image main"><img src="images/segull.jpg" alt="" /></span>
+                                    <p>Næst notaði ég Solidworks til að hanna haldarann. Hönnuninn sem ég kom upp með má sjá á myndinni hér að neðan.</p>
+                                    <span class="image main"><img src="images/haldari.png" alt="" /></span>
+                                    <p>Þessi hönnun mjög hentug þar sem það er mjög auðvelt að ná í skeiðinna og af því hún er mjög lítil þá tekur 3D prentuninn enga stund.</p>
+                                    <h2>3D prentun</h2>
+                                    <p>Prentarinn sem ég ákvað að nota var Prusa MK3. Til að geta prentað þurfti ég að niðurhlaða Pursaslicer sem breytir .stl skrám í g-kóða sem prentarinn skilur. Næst gerði ég .stl skrá af haldaranum og færði yfir í Prusaslicer. Þar gat ég ákveðið hverskonar stuðning ég var með og hvernig hluturinn er prentaður. Ég gerði 30% Infill og supports on buildplate only og ýti á slice takkann. Því næst tók ég sd-kortið sem var í prentaranum sjálfum og setti í tölvuna mína. Þá gat ég vistað g-kóðann frá tölvunni minni yfir í sd-kortið og svo setti ég það aftur í prentarann. </p>
+                                    <span class="image main"><img src="images/g-kodi.png" alt="" /></span>
+                                    <p>Þetta er niðurstaðan</p>
+                                    <span class="image main"><img src="images/haldari2.jpg" alt="" /></span>
+                                    <span class="image main"><img src="images/haldari3.jpg" alt="" /></span>
+                                    <span class="image main"><img src="images/haldari4.jpg" alt="" /></span>
+                                    <h2>Vandamál</h2>
+                                    <p>Ég þurfti að prenta kreatínhaldarann 3 sinnum þar sem opið fyrir segulinn var ekki nógu stórt. Kemur í ljós að plastið stækkar um 3% í prentuninni sjálfri. Þannig ég stækkaði opið um 0.5mm sem var gott fit. En þá fattaði ég að boginn sem heldur skeiðinni sjálfri er nákvæm breidd skeiðinnar þannig ég stækkaði og lengdi hann.</p>
+                                    <h2>3D skönnun</h2>
+                                    <p>Hluturinn sem ég ákvað að 3D skanna er dnd figúrína sem ég málaði fyrir löngu.</p>
+                                    <span class="image main"><img src="images/owlbear.jpg" alt="" /></span>
+                                    <p> Ég notaði Scaniverse sem er app í símanum til að skanna hlutinn þar sem flestir námsfélagar mínir mældu með því forriti. Til að byrja skanna valdi ég new scan>small object. Hvernig forritið virkar er að það notar bæði lidar skannan sem er innbyggður í símanum og myndavélina til að skanna. Það sem mér finnst Scaniverse gerir betra enn önnur forrit er að það tekur upp myndband í stað þess að einstaklingurinn þurfi að taka ótal myndir.</p>
+                                    <h2>Niðurstöður</h2>
+                                    <p>Myndbandið hér fyrir neðan er niðurstaðan.</p>
+                                    <video width="1000" height="600" autoplay muted loop>
+                                    <source src="images/Owlbear.mp4" type="video/mp4">
+                                    <source src="movie.ogg" type="video/ogg">
+                                    </video>
+                                    <h2>Tímatafla</h2>
                                     <table>
   <tr>
     <th>Verkefnihluti</th>
@@ -63,7 +90,7 @@
   <tr>
     <td>Prufa</td>
     <td>3D prent prufa </td>
-    <td>0.5 klst</td>
+    <td>1 klst</td>
   </tr>
   <tr>
     <td>3D Prentun</td>
@@ -73,19 +100,20 @@
  <tr>
     <td>3D Skanna</td>
     <td>3D skanna hlut</td>
-    <td>? klst</td>
+    <td>1 klst</td>
   </tr>
   <tr>
     <td>Skrásetning</td>
     <td>Skrásetning á vefsíðu</td>
-    <td>? klst</td>
+    <td>3 klst</td>
   </tr>
   <tr>
     <td></td>
     <td></td>
-    <td>?</td>
+    <td>8 klst</td>
   </tr>
 </table>
+                                    <p>Verkefnið tók mun minni tíma en ég bjóst við en það er út af því að hluturinn sem ég 3d prentaði var mjög lítill og því tók mjög stuttan tíma að 3D prenta. Ásamt því var ég búinn að fá ráð hvaða forrit ég ætti að nota fyrir 3D skönnunina. Annars gekk verkefnið mjög vel og ekki mikil vandamál eins og í fyrra verkefninu.</p>
 								</div>
 							</section>
 
