--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images/g-kodi.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="3D.html" class="link">3D prentun og 3D skönnun</a></h3>
-										<p>-</p>
+										<p>Verkefni 3 - Tölvustudd framleiðsla</p>
 									</header>
 								</article>
 								<article>
