--- a/Verkefni 4.html
+++ b/Verkefni 4.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Forty by HTML5 UP</title>
+		<title>Lokaverkefni - Fingurgómar á tölvustýrða hendi</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Jónas Þór Gunnarsson</strong> </a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -28,14 +28,12 @@
 				<!-- Menu -->
 					<nav id="menu">
 						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="index.html">Heim</a></li>
+							<li><a href="Verkefni%201.html">Vefsíða</a></li>
+							<li><a href="Arduino.html">Framleiðsla, hönnun og forritun ígreyptra kerfa</a></li>
+							<li><a href="Verkefni%203.html">Tölvustuddur skurður</a></li>
+                            <li><a href="3D.html">3D prentun og 3D skönnun</a></li>
+                            <li><a href="CV.html">Ferilskrá</a></li>
 						</ul>
 					</nav>
 
@@ -46,12 +44,50 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic</h1>
+										<h1>Lokaverkefni - Fingurgómar fyrir tölvustýrðahendi</h1>
 									</header>
 									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<p>
+                                        Markmið lokaverkefnisins er að hanna og búa til heilstæðan hlut með fræsingu. Í boði var að fræsa út út krossviðsplötu til þess að búa til stóa einingu eða fræsa út sílikonmót í vaxkubb. Einnig var sett áhersla á skipulagningu verkferla innan hópsins.
+                                    </p>
+                                    
+                                    <p>Þetta verkefni er unnið samhliða öðru verkefni í áfanganum Tölvustýrður Vélbúnaður þar sem við gerðum tölvustýrt stoðtæki (Hönd Týrs). Hugmyndin er að búa til silicon fingurgóma sem hægt er að festa á fingur þannig hendin fær meira grip.
+                                    </p>
+                                    <h2>
+                                        Hluti 1
+                                    </h2>
+                                    <p>
+                                        Markmið verkefnisins er að hanna og búa til heilstæt verkefni með fræsingu. Það var tvennt í boði. Annaðhvort að fræsa úr stórri krossviðsplötu eða fræsa út siliconmót í vaxkubb.
+                                    </p>
+                                    <span class="image main"><img src="images/Fingurg%C3%B3mur_sketch.jpg" alt="" /></span>
+                                    <h3>
+                                        Fræsing í vaxkubb
+                                    </h3>
+                                    <p>
+                                        Ferlið að búa til fingurgómana er tvískipt. Fyrst þarf að búa fræsa í vaxkubb til að búa til vaxmót. Næst þarf að steypa siliconi í vaxmótið og svo dýfa fingrinum ofan og leyfa siliconinu að storkna. Þannig mun silicon fingurgómarnir festist við fingurinn. Efitr siliconið er búið að storkna er hægt að fjarlæga mótið og 
+                                    </p>
+                                    <p>
+                                        Í gegnum hönnunarferlið er mikilvægt að huga til að fræsirinn er lóðréttur, því þarf að hafa í huga að öll svæði sem verða fræst þurfa að vera aðgengileg að ofan. Til þess að búa til fingurgómana þarf að gera fimm mót. Fjögur alveg eins fyrir fingurnar og eitt fyrir þumalinn.
+                                    </p>
+                                    <span class="image main"><img src="images/Fraesing.jpg" alt="" /></span>
+                                    <h3>
+                                    Hönnun
+                                    </h3>
+                                    <p>
+                                    Við búnir að teikna upp cad-model af fingrinum sem var síðan notað til að búa til mótið með 
+                                        
+                                    Þar sem við ætlum að leggja fingurinn ofan í mótið eftir það var búið að steypa með siliconinu þá þarf ekki að búa til inntaksholu fyrir siliconið.
+                                    </p>
+                                    <p>
+                                    Til að útbúa g-kóða fræsarans var farið eftir leiðbeiningar myndböndum Jóns Þórs.
+                                    #Búa til link á myndböndin
+                                    </p>
+                                    <h3>
+                                    Fræsing
+                                    </h3>
+                                    <p>
+                                    Fræsingin var framkvæmd í Frumgerðasmiðju HÍ og notast var við <a href="https://www.rolanddga.com/products/3d/srm-20-small-milling-machine">Roland SRM-20</a> , sem gerir okkur kleift að setja inn Tool Path beint í forritið VPannel sem sendir gögnin beint í fræsun. Mikilvægt er að setja inn eitt Path í einu þar sem við þurfum að skipta um bora fyrir hvert Path. Hér fyrir neðan má sjá uppstillinguna fræsarans.
+                                    </p>
 								</div>
 							</section>
 
