--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<li><a href="Arduino.html">Framleiðsla, hönnun og forritun ígreyptra kerfa</a></li>
 							<li><a href="Verkefni%203.html">Tölvustuddur skurður</a></li>
                             <li><a href="3D.html">3D prentun og 3D skönnun</a></li>
-                            <li><a href="Verkefni%205.html">Verkefni 5</a></li>
+                            <li><a href="Verkefni%204.html">Lokaverkefni</a></li>
                             <li><a href="CV.html">Ferilskrá</a></li>
 						</ul>
 					</nav>
@@ -98,8 +98,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Verkefni 4</a></h3>
-										<p>-</p>
+										<h3><a href="Verkefni%204.html" class="link">Lokaverkefni</a></h3>
+										<p>Verkefni 4 - Tölvustudd framleiðsla</p>
 									</header>
 								</article>
 								<article>
