--- a/Verkefni 4.html
+++ b/Verkefni 4.html
@@ -151,8 +151,8 @@
                                     </figure>
                                 
                                     <figure>
-                                        <img src="images/F%C3%ADnn1.png" width="400" height="500">
                                         <img src="images/F%C3%ADnn2.png" width="400" height="500">
+                                        <img src="images/F%C3%ADnn1.png" width="400" height="500">
                                         <figcaption>Fínni(notaður með paralel)</figcaption>
                                     </figure>
                                     <h3>
@@ -246,7 +246,7 @@
                                     Kynningar
                                     </h3>
                                     <p>
-                                    Hér má sjá kynningarmyndband verkefnisins. 
+                                    Hér má sjá <a href="https://youtu.be/8S3JypDI_3M">kynningarmyndband</a> verkefnisins. 
                                     </p>
                                     <h3>
                                     Hönnunarvernd
