--- a/Verkefni 4.html
+++ b/Verkefni 4.html
@@ -198,8 +198,9 @@
                                     <figure>
                                         <img src="images/m%C3%B3t1.jpg" width="400" height="500">
                                     </figure>
+                                    
                                     <figure>
-                                        <img src="images/m%C3%B3t2.jpg" width="200" height="500">
+                                        <img src="images/M%C3%B3t2.jpg"width="300" height="500">
                                     </figure>
                                     <h3>
                                     Niðurstöður
