--- a/Verkefni 4.html
+++ b/Verkefni 4.html
@@ -247,7 +247,10 @@
                                     Kynningar
                                     </h3>
                                     <p>
-                                    Hér má sjá <a href="https://youtu.be/8S3JypDI_3M">kynningarmyndband</a> verkefnisins. 
+                                    <a href="https://youtu.be/8S3JypDI_3M">Hér</a> má sjá kynningarmyndband verkefnisins. 
+                                    </p>
+                                    <p>
+                                    Og <a href="Fingurg%C3%B3mar-fyrir-t%C3%B6lvust%C3%BDr%C3%B0a-hendi.pdf">hér</a> má sjá einblöðung verekfnisins.
                                     </p>
                                     <h3>
                                     Hönnunarvernd
